--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,18 @@
             <version>r7</version>
         </dependency>
 
+        <!-- this needs to come above fest-reflect or we pick up the wrong org.fest.util.Strings -->
         <dependency>
             <groupId>org.easytesting</groupId>
             <artifactId>fest-assert-core</artifactId>
             <version>2.0M9</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-reflect</artifactId>
+            <version>1.4</version>
         </dependency>
 
         <dependency>
